<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/fon"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="263dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/zadaha_level1_2" />

    <TextView
        android:id="@+id/logo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/level1_2_nahalo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="425dp"
            android:onClick="Level_12"
            android:paddingHorizontal="115dp"
            android:text="@string/level1_2_otveti1" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="Level_1_3"
            android:paddingHorizontal="115dp"
            android:text="@string/level1_2_otveti2"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:onClick="level_13"
            android:paddingHorizontal="120dp"
            android:text="@string/level1_2_otveti3"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>