<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/fon"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/logo3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/level1_5_nahalo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="263dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/zadaza_figura" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button31"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="425dp"
            android:onClick="level_1_5"
            android:paddingHorizontal="120dp"
            android:text="@string/level1_5_otveti1" />

        <Button
            android:id="@+id/button32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="Level_33"
            android:paddingHorizontal="120dp"
            android:text="@string/level1_5_otveti2" />

        <Button
            android:id="@+id/button33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:onClick="Level_32"
            android:paddingHorizontal="120dp"
            android:text="@string/level1_5_otveti3"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>