<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/fon"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"

        android:text="@string/level1_kones_urovnia"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250sp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/level1_kones_urovnia2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:onClick="konec_urovnia"

        android:text="@string/level1_kones_urovnia3"
        android:textColor="@color/black">

    </Button>

</RelativeLayout>