<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/fon"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="168dp"
        android:layout_height="165dp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/kybik_rubik" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="168dp"
        android:layout_height="165dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/nayka" />

    <Button
        android:id="@+id/button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5dp"
        android:alpha="0.9"
        android:backgroundTint="@color/prozrahnya"
        android:fontFamily="sans-serif"
        android:onClick="level_1"
        android:text="@string/logo6"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView5"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5dp"
        android:alpha="0.9"
        android:backgroundTint="@color/prozrahnya"
        android:fontFamily="sans-serif"
        android:onClick="level_2"
        android:text="@string/logo7"
        android:textAllCaps="false"
        android:textColor="@color/white" />




    <TextView
        android:id="@+id/logo8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/logo8"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />
</RelativeLayout>